# urBackend

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_DIAGRAM.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE.md  README.md  SUMMARY.md  docker-compose.yml  imple_plan.md  package-lock.json  package.json
.github/workflows/: ci.yml
.kiroo/: config.json
apps/dashboard-api/: package.json
apps/public-api/: package.json
apps/web-dashboard/: .env.example  index.html  package.json  vite.config.js
backend/: .env.example  Dockerfile  app.js  package-lock.json  package.json
backend/config/: redis.js
backend/controllers/: auth.controller.js  data.controller.js  project.controller.js  release.controller.js  schema.controller.js  storage.controller.js  userAuth.controller.js
backend/middleware/: authMiddleware.js  auth_limiter.js  projectRateLimiter.js  requireSecretKey.js  verifyApiKey.js
backend/models/: Developer.js  Project.js  Release.js  otp.js
docs/: api-reference.md  authentication.md  database.md  introduction.md  schemas.md
docs-legacy/: WEBHOOKS.md  api-reference.md  authentication.md  database.md  getting-started.md  introduction.md  rls-implementation-roadmap.md  schemas.md  security.md  storage.md
frontend/: package-lock.json  package.json
scratch/: check_exports.js
sdks/urbackend-python/: README.md  pyproject.toml  test_sdk.py
sdks/urbackend-python/src/: __init__.py  auth.py  client.py  db.py  exceptions.py  http.py  mail.py  storage.py
sdks/urbackend-python/src/urbackend/: __init__.py  auth.py  client.py  db.py  http.py  mail.py  storage.py
sdks/urbackend-python/tests/: test_auth.py  test_db.py  test_exceptions.py  test_http.py
(+242 files in other folders)
